# kde-auto-touch-mode

./: README.md  auto-toggle-touch-mode.py  pyproject.toml  run-auto-toggle-script.sh  run-script.sh  run-toggle-script.sh  toggle-touch-mode.sh  touch-mode-toggle.py
src/: auto-toggle-touch-mode.py  auto_toggle_touch_mode.py  toggle-touch-mode.py  toggle_touch_mode.py
