[project]
name = "kde-auto-touch-mode"
version = "0.0.1"
description = "A python script to automatically toggle KDE's `touch mode` when your touchpad is detached."
authors = [{ name = "MRDGH2821", email = "ask.mrdgh2821@outlook.com" }]
dependencies = ["pygobject>=3.48.2", "pyudev>=0.24.3"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.11.1", "pygobject-stubs>=2.11.0"]

[tool.rye.scripts]
auto-toggle = "./src/auto-toggle-touch-mode.py"
manual-toggle = "./src/touch-mode-toggle.py"

[tool.ruff.lint]
select = ['ALL']
ignore = ['S603']

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tablet_mode"]
